--- a/style.css
+++ b/style.css
@@ -15,3 +15,59 @@ body {
 	font-size: small;
 	word-spacing: 15px;
 }
+
+.center {
+    	margin-left: auto;
+    	margin-right: auto;
+	text-align:center;
+	position: absolute;
+	top: 30%;
+	left: 40%;
+}
+
+.textbox {
+	margin-left: auto;
+    	margin-right: auto;
+	text-align:center;
+	position: absolute;
+	top: 50%;
+	left: 30%;
+	size: "45";
+}	
+
+.buttonleft {
+	margin-left: auto;
+    	margin-right: auto;
+	text-align:center;
+	position: absolute;
+	position: absolute;
+	top: 60%;
+	left: 40%;
+}
+
+.buttonright {
+	margin-left: auto;
+    	margin-right: auto;
+	text-align:center;
+	position: absolute;
+	position: absolute;
+	top: 60%;
+	left: 50%;
+}
+
+.navbar {
+    background-color: #D3D3D3;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.navbar a {
+  float: left;
+  display: inline-block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 12px;
+}
